--- a/Karina.html
+++ b/Karina.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
 
     <title>Happy Birthday</title>
-    <link rel="stylesheet" href="../css/birthday-cake.css"  type="text/css" />
-    <link rel="stylesheet" href="../css/bubbles.css" type="text/css" />
-    <link rel="stylesheet" href="../css/memories.css" type="text/css" />
-    <link rel="stylesheet" href="../css/jquery.fullPage.css" type="text/css" />
+    <link rel="stylesheet" href="./birthday-cake.css"  type="text/css" />
+    <link rel="stylesheet" href="./bubbles.css" type="text/css" />
+    <link rel="stylesheet" href="./memories.css" type="text/css" />
+    <link rel="stylesheet" href="./jquery.fullPage.css" type="text/css" />
 </head>
 
 <body>
