--- a/Karina.html
+++ b/Karina.html
@@ -181,7 +181,6 @@
         </svg>
     </div>
     <h2>Happy Birthday!<br>Karina 💛💛💛</h2>
-    <!-- <audio src="music/2.mp3"  autoplay="autoplay" loop="loop"></audio> -->
     <ul class="bg-bubbles">
         <li></li>
         <li></li>
@@ -192,7 +191,7 @@
         <li></li>
         <li></li>
     </ul>
-    <script src='../js/jquery.js'></script>
+    <script src='./jquery.js'></script>
 </div>
 </body>
 
